# Capybara-Desktop-Pet

./: CMakeLists.txt  Info.plist.in  README.md  info.plist
Resources/shader/: test_frag.frag
libs/tinygltf/: CMakeLists.txt
libs/tinygltf/src/: tinygltf.cpp
res/icons/: icon.icns
res/shader/: test_vert.vert
src/: GLare.hpp  main.cpp  main.mm  model.cpp  model.hpp  pch.hpp  util.hpp
